--- a/PracticeApp/www/css/styles.css
+++ b/PracticeApp/www/css/styles.css
@@ -2,6 +2,15 @@
     color: #fff;
     text-shadow: 1px 1px 2px black;
 }
+#regular-text{
+    font-size: 19px;
+}
+#large-text{
+    font-size: 25px;
+}
+.main-feature {
+    font-size: 19px;
+}
 #container{
     background: url("../media/background2.png") no-repeat;
 }
@@ -127,6 +136,7 @@ body {
     position: absolute;
     margin-top: 0;
     max-width: 450px;
+    z-index: 7;
 }
 .swiper-pagination-bullet > span {
     font-size: 15px;
