--- a/PracticeApp/www/css/styles.css
+++ b/PracticeApp/www/css/styles.css
@@ -172,7 +172,7 @@ h3{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 12;
     display: none;
 }
 .poster {
@@ -180,18 +180,19 @@ h3{
     width: 200px;
 }
 #modal {
-    width: 680px;
+    width: 995px;
     background: #fff;
     box-shadow: 0 0 10px #000;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
-    top: 40%;
-    left: 40%;
+    top: 27.5%;
+    left: 21%;
     margin-top: -200px;
     margin-left: -200px;
     z-index: 11;
     display: none;
+    height: 745px;
 }
 #modal .head {
     background: #eee;
