--- a/PracticeApp/www/css/styles.css
+++ b/PracticeApp/www/css/styles.css
@@ -54,12 +54,13 @@ html, body {
     height: 100%;
 }
 body {
-    background: #eee;
+    background: #000;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
     color:#000;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 .row {
     width: 100%;
@@ -70,37 +71,37 @@ body {
     width: 8.33%;
 }
 .col-2 {
-        width: 16.66%;
+    width: 16.66%;
 }
 .col-3 {
-        width: 25%;
+    width: 25%;
 }
 .col-4 {
-        width: 33.33%;
+    width: 33.33%;
 }
 .col-5 {
-        width: 41.66%;
+    width: 41.66%;
 }
 .col-6 {
-        width: 50%;
+    width: 50%;
 }
 .col-7 {
-        width: 58.33%;
+    width: 58.33%;
 }
 .col-8 {
-        width: 66.66%;
+    width: 66.66%;
 }
 .col-9 {
-        width: 75%;
+width: 75%;
 }
 .col-10 {
-        width: 83.33%;
+width: 83.33%;
 }
 .col-11 {
-        width: 91.66%;
+    width: 91.66%;
 }
 .col-12 {
-        width: 100%;
+    width: 100%;
 }
 #footer{
     background-image: url("../media/woodgrain.jpg");
@@ -212,7 +213,120 @@ h3{
     cursor: pointer;
     border-radius: 100%;
 }
-
 .inline-title{
     white-space: nowrap;
+}
+.spot-container {
+    position: relative;
+}
+.spot {
+    border: 4px solid #fff;
+    border-radius: 30px;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    animation: pulsate 1.75s ease-out;
+    animation-iteration-count: infinite; 
+    opacity: 0.0
+}
+#spot1 {
+    position: absolute;
+    bottom: 37%;
+    left: 12%;
+    z-index:10;
+}
+#spot2 {
+    position: absolute;
+    bottom: 46%;
+    left: 54%;
+    z-index:10;
+}
+#spot3 {
+    position: absolute;
+    top: 69%;
+    right: 71%;
+    z-index:10;
+}
+#spot4 {
+    position: absolute;
+    bottom: 65%;
+    left: 4%;
+    z-index:10;
+}
+#spot5 {
+    position: absolute;
+    bottom: 25%;
+    left: 70%;
+    z-index:10;
+}
+#spot6 {
+    position: absolute;
+    top: 68%;
+    right: 54%;
+    z-index:10;
+}
+#spot7 {
+    position: absolute;
+    bottom: 29%;
+    left: 24%;
+    z-index:10;
+}
+#spot8 {
+    position: absolute;
+    top: 59%;
+    right: 41%;
+    z-index:10;
+}
+#spot9 {
+    position: absolute;
+    bottom: 88%;
+    left: 23%;
+    z-index:10;
+}
+#spot10 {
+    position: absolute;
+    bottom: 34%;
+    left: 20%;
+    z-index:10;
+}
+#spot11 {
+    position: absolute;
+    bottom: 34%;
+    left: 53%;
+    z-index:10;
+}
+#spot12 {
+    position: absolute;
+    top: 37%;
+    right: 60%;
+    z-index:10;
+}
+.element {
+    height: 250px;
+    width: 250px;
+}
+@keyframes stretch {
+    0% {
+        transform: scale(.3);
+        background-color: white;
+        border-radius: 100%;
+        border: 2px solid black;
+    }
+    50% {
+        background-color: white;
+        border-radius: 100%;
+        border: 2px solid black;
+    }
+    100% {
+        transform: scale(1.75);
+        background-color: white;
+        border: 2px solid black;
+        border-radius: 100%;
+    }
+}
+
+@keyframes pulsate {
+    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.0;}
+    50% {opacity: 1.0;}
+    100% {-webkit-transform: scale(1.2, 1.2); opacity: 0.0;}
 }
