--- a/EBC App/www/css/swiper.css
+++ b/EBC App/www/css/swiper.css
@@ -179,7 +179,7 @@
   -o-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   z-index: 10;
-  background: url("../media/footer.png") no-repeat;
+  background: url("../media/footerPLT.png") no-repeat;
 }
 .swiper-pagination.swiper-pagination-hidden {
   opacity: 0;
@@ -188,8 +188,8 @@
 .swiper-pagination-fraction,
 .swiper-pagination-custom,
 .swiper-container-horizontal > .swiper-pagination-bullets {
-  bottom: 0;
-  height: 160px;
+  bottom: -1px;
+  height: 200px;
   left: 0;
   width: 100%;
 }
@@ -243,7 +243,7 @@ button.swiper-pagination-bullet {
 }
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 0 105px;
-  padding-top: 15px;
+  padding-top: 33px;
 }
 /* Progress */
 .swiper-pagination-progress {
