--- a/EBC App/www/css/style_exhibit1.css
+++ b/EBC App/www/css/style_exhibit1.css
@@ -224,8 +224,8 @@ h3{
 .spot {
     border: 6px solid #fff;
     border-radius: 100%;
-    height: 80px;
-    width: 80px;
+    height: 90px;
+    width: 90px;
     position: absolute;
     animation: pulsate 1.75s ease-out;
     animation-iteration-count: infinite; 
@@ -233,75 +233,171 @@ h3{
 }
 #spot1 {
     position: absolute;
-    bottom: 32%;
-    left: 6%;
+    bottom: 31%;
+    left: 5%;
     z-index:10;
+}
+#spot1-off {
+    position: absolute;
+    bottom: 38%;
+    left: 13%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot2 {
     position: absolute;
-    bottom: 41%;
-    left: 48%;
+    bottom: 39%;
+    left: 47%;
     z-index:10;
+}
+#spot2-off {
+    position: absolute;
+    bottom: 46%;
+    left: 55%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot3 {
     position: absolute;
     top: 64%;
-    right: 66%;
+    right: 64%;
     z-index:10;
+}
+#spot3-off {
+    position: absolute;
+    top: 71%;
+    right: 72%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot4 {
     position: absolute;
     bottom: 60%;
-    left: 0%;
+    left: -1%;
     z-index:10;
+}
+#spot4-off {
+    position: absolute;
+    bottom: 67%;
+    left: 7%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot5 {
     position: absolute;
-    bottom: 20%;
-    left: 65%;
+    bottom: 19%;
+    left: 64%;
     z-index:10;
+}
+#spot5-off {
+    position: absolute;
+    bottom: 26%;
+    left: 72%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot6 {
     position: absolute;
-    top: 63%;
-    right: 49%;
+    top: 62%;
+    right: 47%;
     z-index:10;
+}
+#spot6-off {
+    position: absolute;
+    top: 69%;
+    right: 55%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot7 {
     position: absolute;
-    bottom: 24%;
-    left: 20%;
+    bottom: 23%;
+    left: 18%;
     z-index:10;
+}
+#spot7-off {
+    position: absolute;
+    bottom: 30%;
+    left: 26%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot8 {
     position: absolute;
-    top: 54%;
-    right: 36%;
+    top: 52%;
+    right: 35%;
     z-index:10;
+}
+#spot8-off {
+    position: absolute;
+    top: 59%;
+    right: 43%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot9 {
     position: absolute;
     bottom: 82%;
-    left: 17%;
+    left: 16%;
     z-index:10;
+}
+#spot9-off {
+    position: absolute;
+    bottom: 89%;
+    left: 24%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot10 {
     position: absolute;
-    bottom: 29%;
-    left: 14%;
+    bottom: 28%;
+    left: 13%;
     z-index:10;
+}
+#spot10-off {
+    position: absolute;
+    bottom: 35%;
+    left: 21%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot11 {
     position: absolute;
-    bottom: 30%;
-    left: 47%;
+    bottom: 29%;
+    left: 48%;
     z-index:10;
+}
+#spot11-off {
+    position: absolute;
+    bottom: 36%;
+    left: 56%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot12 {
     position: absolute;
-    top: 33%;
+    top: 31%;
     right: 55%;
     z-index:10;
+}
+#spot12-off {
+    position: absolute;
+    top: 38%;
+    right: 63%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 .element {
     height: 250px;
