--- a/EBC App/www/css/style_exhibit2.css
+++ b/EBC App/www/css/style_exhibit2.css
@@ -223,8 +223,8 @@ h3{
 .spot {
     border: 6px solid #fff;
     border-radius: 100%;
-    height: 80px;
-    width: 80px;
+    height: 90px;
+    width: 90px;
     position: absolute;
     animation: pulsate 1.75s ease-out;
     animation-iteration-count: infinite; 
@@ -232,75 +232,171 @@ h3{
 }
 #spot1 {
     position: absolute;
-    margin-top: 41%;
-    left: 20%;
+    margin-top: 40%;
+    left: 19%;
     z-index:10;
+}
+#spot1-off {
+    position: absolute;
+    margin-top: 48%;
+    left: 27%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot2 {
     position: absolute;
     margin-top: 25%;
-    left: 33%;
+    left: 32%;
     z-index:10;
+}
+#spot2-off {
+    position: absolute;
+    margin-top: 33%;
+    left: 40%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot3 {
     position: absolute;
-    margin-top: 88%;
-    right: 67%;
+    margin-top: 87%;
+    right: 66%;
     z-index:10;
+}
+#spot3-off {
+    position: absolute;
+    margin-top: 95%;
+    right: 74%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot4 {
     position: absolute;
-    margin-top: 56%;
-    left: 46%;
+    margin-top: 55%;
+    left: 45%;
     z-index:10;
+}
+#spot4-off {
+    position: absolute;
+    margin-top: 63%;
+    left: 53%;
+    z-index:10;
+    height: 10px;
+    width: 10px;
 }
 #spot5 {
     position: absolute;
-    margin-top: 89%;
-    left: 68%;
+    margin-top: 88%;
+    left: 67%;
     z-index:10;
+}
+#spot5-off {
+    position: absolute;
+    margin-top: 96%;
+    left: 75%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot6 {
     position: absolute;
-    margin-top: 9%;
-    right: 53%;
+    margin-top: 8%;
+    right: 54%;
     z-index:10;
+}
+#spot6-off {
+    position: absolute;
+    margin-top: 16%;
+    right: 62%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot7 {
     position: absolute;
-    margin-top: 45%;
-    left: 14%;
+    margin-top: 44%;
+    left: 13%;
     z-index:10;
+}
+#spot7-off {
+    position: absolute;
+    margin-top: 52%;
+    left: 21%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot8 {
     position: absolute;
-    margin-top: 34%;
-    right: 53%;
+    margin-top: 33%;
+    right: 51%;
     z-index:10;
+}
+#spot8-off {
+    position: absolute;
+    margin-top: 41%;
+    right: 59%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot9 {
     position: absolute;
-    margin-top: 20%;
-    left: 48%;
+    margin-top: 19%;
+    left: 46%;
     z-index:10;
+}
+#spot9-off {
+    position: absolute;
+    margin-top: 27%;
+    left: 54%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot10 {
     position: absolute;
-    margin-top: 10%;
-    left: 52%;
+    margin-top: 9%;
+    left: 50%;
     z-index:10;
+}
+#spot10-off {
+    position: absolute;
+    margin-top: 16%;
+    left: 58%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 #spot11 {
     position: absolute;
-    margin-top: 38%;
+    margin-top: 37%;
     left: 19%;
     z-index:10;
 }
+#spot11-off {
+    position: absolute;
+    margin-top: 45%;
+    left: 27%;
+    z-index:10;
+    height: 10px;
+    width: 10px
+}
 #spot12 {
     position: absolute;
-    margin-top: 58%;
+    margin-top: 55%;
     right: 21%;
     z-index:10;
+}
+#spot12-off {
+    position: absolute;
+    margin-top: 63%;
+    right: 29%;
+    z-index:10;
+    height: 10px;
+    width: 10px
 }
 .element {
     height: 250px;
