--- a/EBC App/www/css/style_exhibit3.css
+++ b/EBC App/www/css/style_exhibit3.css
@@ -13,16 +13,16 @@
     margin-top: 10px;
 }
 #container{
-    background: url("../media/exhibit1/background2.png") no-repeat;
+    background: url("../media/exhibit2/background1.png") no-repeat;
 }
 #container2{
-    background: url("../media/exhibit1/background1.png") no-repeat;
+    background: url("../media/exhibit2/background2.png") no-repeat;
 }
 #container3{
-    background: url("../media/exhibit1/background3.png") no-repeat;
+    background: url("../media/exhibit2/background3.png") no-repeat;
 }
 #container4{
-    background: url("../media/exhibit1/background4.png") no-repeat;
+    background: url("../media/exhibit2/background4.png") no-repeat;
 }
 #main-header {
     font-size: 60px;
@@ -30,17 +30,32 @@
 #secondary-header {
     font-size: 30px;
 }
-#bbfit{
-    height: 400px;
-    width: 450px;
-    position: relative;
-    z-index: 2;
-    margin-top: 160px;
+#voyager-5200{
+    height: 280px;
+    margin-top: 145px;
+    left: 15px;
+    position: absolute;
+    z-index: 10;
+}
+#voyager-edge{
+    height: 390px;
+    margin-top: 90px;
+    left: 45px;
+    position: absolute;
+    z-index: 10;
+}
+#voyager-focus{
+    height: 550px;
+    margin-top: 20px;
+    left: 85px;
+    position: absolute;
+    z-index: 10;
 }
 .prodImg{
-    height: 560px;
-    width: 400px;
-    position: relative;
+    height: 575px;
+    margin-top: 5px;
+    left: -60px;
+    position: absolute;
     z-index: 10;
 }
 .padded{
@@ -105,32 +120,32 @@ width: 83.33%;
     width: 100%;
 }
 #footer{
-    background-image: url("../media/woodgrain.jpg");
+    background-image: url("../media/woodgrain3.jpg");
     height: 275px;
     background-repeat: no-repeat;
-    bottom: 110px;
+    bottom: -37.25%;
     position: relative;
     z-index: 5;
 }
 #footer2{
-    background-image: url("../media/linoleum2.jpg");
+    background-image: url("../media/linoleum4.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: 110px;
+    bottom: -39%;
     position: relative;
 }
 #footer3{
-    background-image: url("../media/linoleum1.jpg");
+    background-image: url("../media/tile.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: 110px;
+    bottom: -32%;
     position: relative;
 }
 #footer4{
-    background-image: url("../media/linoleum3.jpg");
+    background-image: url("../media/woodgrain2.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: 110px;
+    bottom: -39%;
     position: relative;
 }
 .features{
@@ -233,171 +248,171 @@ h3{
 }
 #spot1 {
     position: absolute;
-    bottom: 31%;
-    left: 5%;
+    margin-top: 40%;
+    left: 19%;
     z-index:10;
 }
 #spot1-off {
     position: absolute;
-    bottom: 38%;
-    left: 13%;
+    margin-top: 48%;
+    left: 27%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot2 {
     position: absolute;
-    bottom: 39%;
-    left: 47%;
+    margin-top: 25%;
+    left: 32%;
     z-index:10;
 }
 #spot2-off {
     position: absolute;
-    bottom: 46%;
-    left: 55%;
+    margin-top: 33%;
+    left: 40%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot3 {
     position: absolute;
-    top: 64%;
-    right: 64%;
+    margin-top: 87%;
+    right: 66%;
     z-index:10;
 }
 #spot3-off {
     position: absolute;
-    top: 71%;
-    right: 72%;
+    margin-top: 95%;
+    right: 74%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot4 {
     position: absolute;
-    bottom: 60%;
-    left: -1%;
+    margin-top: 55%;
+    left: 45%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    bottom: 67%;
-    left: 7%;
+    margin-top: 63%;
+    left: 53%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    bottom: 19%;
-    left: 64%;
+    margin-top: 88%;
+    left: 67%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    bottom: 26%;
-    left: 72%;
+    margin-top: 96%;
+    left: 75%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot6 {
     position: absolute;
-    top: 62%;
-    right: 47%;
+    margin-top: 8%;
+    right: 54%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    top: 69%;
-    right: 55%;
+    margin-top: 16%;
+    right: 62%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot7 {
     position: absolute;
-    bottom: 23%;
-    left: 18%;
+    margin-top: 44%;
+    left: 13%;
     z-index:10;
 }
 #spot7-off {
     position: absolute;
-    bottom: 30%;
-    left: 26%;
+    margin-top: 52%;
+    left: 21%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot8 {
     position: absolute;
-    top: 52%;
-    right: 35%;
+    margin-top: 33%;
+    right: 51%;
     z-index:10;
 }
 #spot8-off {
     position: absolute;
-    top: 59%;
-    right: 43%;
+    margin-top: 41%;
+    right: 59%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot9 {
     position: absolute;
-    bottom: 82%;
-    left: 16%;
+    margin-top: 19%;
+    left: 46%;
     z-index:10;
 }
 #spot9-off {
     position: absolute;
-    bottom: 89%;
-    left: 24%;
+    margin-top: 27%;
+    left: 54%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot10 {
     position: absolute;
-    bottom: 28%;
-    left: 13%;
+    margin-top: 9%;
+    left: 50%;
     z-index:10;
 }
 #spot10-off {
     position: absolute;
-    bottom: 35%;
-    left: 21%;
+    margin-top: 16%;
+    left: 58%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot11 {
     position: absolute;
-    bottom: 29%;
-    left: 48%;
+    margin-top: 37%;
+    left: 19%;
     z-index:10;
 }
 #spot11-off {
     position: absolute;
-    bottom: 36%;
-    left: 56%;
+    margin-top: 45%;
+    left: 27%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 #spot12 {
     position: absolute;
-    top: 31%;
-    right: 55%;
+    margin-top: 55%;
+    right: 21%;
     z-index:10;
 }
 #spot12-off {
     position: absolute;
-    top: 38%;
-    right: 63%;
+    margin-top: 63%;
+    right: 29%;
     z-index:10;
     height: 10px;
-    width: 10px;
+    width: 10px
 }
 .element {
     height: 250px;
@@ -521,4 +536,7 @@ h3{
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+.header-0{
+    margin-top: -25px;
 }
