--- a/EBC App/www/css/style_exhibit3.css
+++ b/EBC App/www/css/style_exhibit3.css
@@ -13,16 +13,16 @@
     margin-top: 10px;
 }
 #container{
-    background: url("../media/exhibit2/background1.png") no-repeat;
+    background: url("../media/exhibit3/background1.png") no-repeat;
 }
 #container2{
-    background: url("../media/exhibit2/background2.png") no-repeat;
+    background: url("../media/exhibit3/background2.png") no-repeat;
 }
 #container3{
-    background: url("../media/exhibit2/background3.png") no-repeat;
+    background: url("../media/exhibit3/background3.png") no-repeat;
 }
 #container4{
-    background: url("../media/exhibit2/background4.png") no-repeat;
+    background: url("../media/exhibit3/background4.png") no-repeat;
 }
 #main-header {
     font-size: 60px;
@@ -120,7 +120,7 @@ width: 83.33%;
     width: 100%;
 }
 #footer{
-    background-image: url("../media/woodgrain3.jpg");
+    background-image: url("../media/woodgrain2.jpg");
     height: 275px;
     background-repeat: no-repeat;
     bottom: -37.25%;
@@ -128,21 +128,21 @@ width: 83.33%;
     z-index: 5;
 }
 #footer2{
-    background-image: url("../media/linoleum4.jpg");
+    background-image: url("../media/tile.jpg");
     height: 240px;
     background-repeat: no-repeat;
     bottom: -39%;
     position: relative;
 }
 #footer3{
-    background-image: url("../media/tile.jpg");
+    background-image: url("../media/woodgrain.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: -32%;
+    bottom: -34%;
     position: relative;
 }
 #footer4{
-    background-image: url("../media/woodgrain2.jpg");
+    background-image: url("../media/linoleum1.jpg");
     height: 240px;
     background-repeat: no-repeat;
     bottom: -39%;
@@ -248,168 +248,168 @@ h3{
 }
 #spot1 {
     position: absolute;
-    margin-top: 40%;
-    left: 19%;
+    margin-top: 50%;
+    left: 18%;
     z-index:10;
 }
 #spot1-off {
     position: absolute;
-    margin-top: 48%;
-    left: 27%;
+    margin-top: 58%;
+    left: 26%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot2 {
     position: absolute;
-    margin-top: 25%;
-    left: 32%;
+    margin-top: 58%;
+    left: 41%;
     z-index:10;
 }
 #spot2-off {
     position: absolute;
-    margin-top: 33%;
-    left: 40%;
+    margin-top: 66%;
+    left: 49%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot3 {
     position: absolute;
-    margin-top: 87%;
-    right: 66%;
+    margin-top: 12%;
+    right: 33%;
     z-index:10;
 }
 #spot3-off {
     position: absolute;
-    margin-top: 95%;
-    right: 74%;
+    margin-top: 20%;
+    right: 41%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot4 {
     position: absolute;
-    margin-top: 55%;
-    left: 45%;
+    margin-top: 67%;
+    left: 64%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    margin-top: 63%;
-    left: 53%;
+    margin-top: 75%;
+    left: 72%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    margin-top: 88%;
-    left: 67%;
+    margin-top: 23%;
+    left: 3%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    margin-top: 96%;
-    left: 75%;
+    margin-top: 30.5%;
+    left: 10.5%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot6 {
     position: absolute;
-    margin-top: 8%;
-    right: 54%;
+    margin-top: 51%;
+    right: 55%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    margin-top: 16%;
-    right: 62%;
+    margin-top: 59%;
+    right: 63%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot7 {
     position: absolute;
-    margin-top: 44%;
-    left: 13%;
+    margin-top: 72%;
+    left: 49%;
     z-index:10;
 }
 #spot7-off {
     position: absolute;
-    margin-top: 52%;
-    left: 21%;
+    margin-top: 80%;
+    left: 57%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot8 {
     position: absolute;
-    margin-top: 33%;
-    right: 51%;
+    margin-top: 0%;
+    right: 56%;
     z-index:10;
 }
 #spot8-off {
     position: absolute;
-    margin-top: 41%;
-    right: 59%;
+    margin-top: 8%;
+    right: 64%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot9 {
     position: absolute;
-    margin-top: 19%;
-    left: 46%;
+    margin-top: 39%;
+    left: 20%;
     z-index:10;
 }
 #spot9-off {
     position: absolute;
-    margin-top: 27%;
-    left: 54%;
+    margin-top: 47%;
+    left: 28%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot10 {
     position: absolute;
-    margin-top: 9%;
-    left: 50%;
+    margin-top: 25%;
+    left: 30%;
     z-index:10;
 }
 #spot10-off {
     position: absolute;
-    margin-top: 16%;
-    left: 58%;
+    margin-top: 33%;
+    left: 38%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot11 {
     position: absolute;
-    margin-top: 37%;
-    left: 19%;
+    margin-top: 65%;
+    left: 69%;
     z-index:10;
 }
 #spot11-off {
     position: absolute;
-    margin-top: 45%;
-    left: 27%;
+    margin-top: 73%;
+    left: 77%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot12 {
     position: absolute;
-    margin-top: 55%;
-    right: 21%;
+    margin-top: 10%;
+    right: 63%;
     z-index:10;
 }
 #spot12-off {
     position: absolute;
-    margin-top: 63%;
-    right: 29%;
+    margin-top: 18%;
+    right: 71%;
     z-index:10;
     height: 10px;
     width: 10px
