--- a/EBC App/www/css/style_exhibit2.css
+++ b/EBC App/www/css/style_exhibit2.css
@@ -153,6 +153,7 @@ width: 83.33%;
     margin-top: 20px;
     height: 100px;
     width: 100px;
+    box-shadow: 5px 5px 15px black;
 }
 .features > li, div.show-more {
     font-size: 20px;
