--- a/EBC App/www/css/style_exhibit2.css
+++ b/EBC App/www/css/style_exhibit2.css
@@ -29,6 +29,7 @@
 }
 #secondary-header {
     font-size: 30px;
+    width: 95%;
 }
 #calisto{
     height: 345px;
@@ -105,37 +106,43 @@ width: 83.33%;
 }
 #footer{
     background-image: url("../media/woodgrain3.jpg");
-    height: 275px;
+    height: 240px;
     background-repeat: no-repeat;
-    bottom: -37.25%;
+    margin-top: 468px;
     position: relative;
-    z-index: 5;
 }
 #footer2{
     background-image: url("../media/linoleum4.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: -39%;
+    margin-top: 468px;
     position: relative;
 }
 #footer3{
     background-image: url("../media/tile.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: -32%;
+    margin-top: 468px;
     position: relative;
 }
 #footer4{
     background-image: url("../media/woodgrain2.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: -39%;
+    margin-top: 468px;
     position: relative;
+}
+#features-3{
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    margin-top: 165px;
+    max-width: 450px;
+    z-index: 7;
 }
 .features{
     font-family: 'Roboto', sans-serif;
     position: absolute;
-    margin-top: 0;
+    margin-top: 150px;
     max-width: 450px;
     z-index: 7;
 }
@@ -153,17 +160,17 @@ width: 83.33%;
     margin-top: 20px;
     height: 100px;
     width: 100px;
-    box-shadow: 5px 5px 15px black;
+    box-shadow: 2px 2px 10px black;
 }
 .features > li, div.show-more {
     font-size: 20px;
 }
-.features > li > ul > li {
+.features > ul > li > ul > li {
     font-size: 15px;
     margin-top: 10px;
     margin-left: -36px;
     list-style-type: none;
-    width: 80%;
+    width: 100%;
 }
 h3{
     margin-bottom: 0;
@@ -522,6 +529,7 @@ h3{
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
-.header-0{
-    margin-top: -25px;
+
+.header-text{
+    position: absolute;
 }
