--- a/EBC App/www/css/style_exhibit1.css
+++ b/EBC App/www/css/style_exhibit1.css
@@ -37,6 +37,12 @@
     z-index: 2;
     margin-top: 160px;
 }
+#bb500{
+    height: 560px;
+    width: 465px;
+    position: relative;
+    z-index: 10;
+}
 .prodImg{
     height: 560px;
     width: 400px;
@@ -126,7 +132,7 @@ width: 83.33%;
     position: relative;
 }
 #footer4{
-    background-image: url("../media/linoleum3.jpg");
+    background-image: url("../media/woodgrain2.jpg");
     height: 240px;
     background-repeat: no-repeat;
     bottom: 95px;
@@ -359,14 +365,14 @@ h3{
 }
 #spot10 {
     position: absolute;
-    bottom: 28%;
-    left: 13%;
+    bottom: 16%;
+    left: 63%;
     z-index:10;
 }
 #spot10-off {
     position: absolute;
-    bottom: 35%;
-    left: 21%;
+    bottom: 24%;
+    left: 71%;
     z-index:10;
     height: 10px;
     width: 10px;
@@ -374,27 +380,27 @@ h3{
 #spot11 {
     position: absolute;
     bottom: 29%;
-    left: 48%;
+    left: 54%;
     z-index:10;
 }
 #spot11-off {
     position: absolute;
     bottom: 36%;
-    left: 56%;
+    left: 62%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot12 {
     position: absolute;
-    top: 31%;
-    right: 55%;
+    top: 72%;
+    right: 71%;
     z-index:10;
 }
 #spot12-off {
     position: absolute;
-    top: 38%;
-    right: 63%;
+    top: 79%;
+    right: 79%;
     z-index:10;
     height: 10px;
     width: 10px;
