--- a/EBC App/www/css/style_exhibit3.css
+++ b/EBC App/www/css/style_exhibit3.css
@@ -24,6 +24,12 @@
 #container4{
     background: url("../media/exhibit3/background4.png") no-repeat;
 }
+#container4{
+    background: url("../media/exhibit3/background4.png") no-repeat;
+}
+#container5{
+    background: url("../media/exhibit1/background2.png") no-repeat;
+}
 #main-header {
     font-size: 60px;
 }
@@ -40,7 +46,7 @@
 #voyager-edge{
     height: 390px;
     margin-top: 90px;
-    left: 45px;
+    left: 10px;
     position: absolute;
     z-index: 10;
 }
@@ -48,6 +54,13 @@
     height: 550px;
     margin-top: 20px;
     left: 85px;
+    position: absolute;
+    z-index: 10;
+}
+#voyager-8200{
+    height: 550px;
+    margin-top: 20px;
+    left: 30px;
     position: absolute;
     z-index: 10;
 }
@@ -142,6 +155,13 @@ width: 83.33%;
 }
 #footer4{
     background-image: url("../media/linoleum1.jpg");
+    height: 240px;
+    background-repeat: no-repeat;
+    margin-top: 468px;
+    position: relative;
+}
+#footer5{
+    background-image: url("../media/woodgrain3.jpg");
     height: 240px;
     background-repeat: no-repeat;
     margin-top: 468px;
@@ -374,42 +394,84 @@ h3{
 }
 #spot10 {
     position: absolute;
-    margin-top: 25%;
-    left: 30%;
+    margin-top: 23%;
+    left: 25%;
     z-index:10;
 }
 #spot10-off {
     position: absolute;
-    margin-top: 33%;
-    left: 38%;
+    margin-top: 31%;
+    left: 33%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot11 {
     position: absolute;
-    margin-top: 65%;
-    left: 69%;
+    margin-top: 72%;
+    left: 73%;
     z-index:10;
 }
 #spot11-off {
     position: absolute;
-    margin-top: 73%;
-    left: 77%;
+    margin-top: 80%;
+    left: 82%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot12 {
     position: absolute;
-    margin-top: 10%;
-    right: 63%;
+    margin-top: 14%;
+    right: 68%;
     z-index:10;
 }
 #spot12-off {
     position: absolute;
-    margin-top: 18%;
-    right: 71%;
+    margin-top: 22%;
+    right: 75%;
+    z-index:10;
+    height: 10px;
+    width: 10px
+}
+#spot13 {
+    position: absolute;
+    margin-top: 74%;
+    left: 27%;
+    z-index:10;
+}
+#spot13-off {
+    position: absolute;
+    margin-top: 82%;
+    left: 35%;
+    z-index:10;
+    height: 10px;
+    width: 10px
+}
+#spot14 {
+    position: absolute;
+    margin-top: 69%;
+    left: 64%;
+    z-index:10;
+}
+#spot14-off {
+    position: absolute;
+    margin-top: 77%;
+    left: 72%;
+    z-index:10;
+    height: 10px;
+    width: 10px
+}
+#spot15 {
+    position: absolute;
+    margin-top: 57%;
+    right: 31%;
+    z-index:10;
+}
+#spot15-off {
+    position: absolute;
+    margin-top: 65%;
+    right: 38%;
     z-index:10;
     height: 10px;
     width: 10px
