added home button to exhibits

--- a/EBC App/www/css/style_exhibit2.css
+++ b/EBC App/www/css/style_exhibit2.css
@@ -533,3 +533,15 @@ h3{
 .header-text{
     position: absolute;
 }
+.myButton {
+	background-color:transparent;
+	border:1.75px solid #ffffff;
+	color:#ffffff !important;
+	font-size:20px;
+	padding:12px 12px;
+	text-decoration:none;
+    position: absolute;
+    margin-left: 370px;
+    margin-top: -15px;
+    font-weight: 100 !important;
+}
