--- a/EBC_App/www/css/style_exhibit2.css
+++ b/EBC_App/www/css/style_exhibit2.css
@@ -31,15 +31,14 @@
     font-size: 30px;
     width: 95%;
 }
-#calisto{
-    height: 345px;
-    margin-top: 90px;
-    position: absolute;
-    z-index: 10;
+#blackwire{
+    margin-left: 70px;
+    height: 525px;
+    margin-top: 30px;
 }
 .prodImg{
-    height: 450px;
-    margin-top: 90px;
+    height: 480px;
+    margin-top: 40px;
     position: absolute;
     z-index: 10;
 }
@@ -240,168 +239,84 @@ h3{
 }
 #spot1 {
     position: absolute;
-    margin-top: 40%;
-    left: 19%;
+    margin-top: 86%;
+    left: 32%;
     z-index:10;
 }
 #spot1-off {
     position: absolute;
-    margin-top: 48%;
-    left: 27%;
+    margin-top: 94%;
+    left: 40%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot2 {
     position: absolute;
-    margin-top: 25%;
-    left: 32%;
+    margin-top: 46%;
+    left: 25%;
     z-index:10;
 }
 #spot2-off {
     position: absolute;
-    margin-top: 33%;
-    left: 40%;
+    margin-top: 54%;
+    left: 33%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot3 {
     position: absolute;
-    margin-top: 87%;
-    right: 66%;
+    margin-top: 0%;
+    right: 42%;
     z-index:10;
 }
 #spot3-off {
     position: absolute;
-    margin-top: 95%;
-    right: 74%;
+    margin-top: 7%;
+    right: 52%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot4 {
     position: absolute;
-    margin-top: 55%;
-    left: 45%;
+    margin-top: 49%;
+    left: 48%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    margin-top: 63%;
-    left: 53%;
+    margin-top: 57%;
+    left: 56%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    margin-top: 88%;
-    left: 67%;
+    margin-top: 84%;
+    left: 71%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    margin-top: 96%;
-    left: 75%;
+    margin-top: 92%;
+    left: 79%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot6 {
     position: absolute;
-    margin-top: 8%;
-    right: 54%;
+    margin-top: -1%;
+    right: 51%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    margin-top: 16%;
-    right: 62%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot7 {
-    position: absolute;
-    margin-top: 44%;
-    left: 13%;
-    z-index:10;
-}
-#spot7-off {
-    position: absolute;
-    margin-top: 52%;
-    left: 21%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot8 {
-    position: absolute;
-    margin-top: 33%;
-    right: 51%;
-    z-index:10;
-}
-#spot8-off {
-    position: absolute;
-    margin-top: 41%;
-    right: 59%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot9 {
-    position: absolute;
-    margin-top: 19%;
-    left: 46%;
-    z-index:10;
-}
-#spot9-off {
-    position: absolute;
-    margin-top: 27%;
-    left: 54%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot10 {
-    position: absolute;
-    margin-top: 9%;
-    left: 50%;
-    z-index:10;
-}
-#spot10-off {
-    position: absolute;
-    margin-top: 16%;
-    left: 58%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot11 {
-    position: absolute;
-    margin-top: 37%;
-    left: 19%;
-    z-index:10;
-}
-#spot11-off {
-    position: absolute;
-    margin-top: 45%;
-    left: 27%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot12 {
-    position: absolute;
-    margin-top: 55%;
-    right: 21%;
-    z-index:10;
-}
-#spot12-off {
-    position: absolute;
-    margin-top: 63%;
-    right: 29%;
+    margin-top: 6%;
+    right: 58%;
     z-index:10;
     height: 10px;
     width: 10px
