--- a/EBC_App/www/css/style_exhibit3.css
+++ b/EBC_App/www/css/style_exhibit3.css
@@ -13,61 +13,33 @@
     margin-top: 10px;
 }
 #container{
-    background: url("../media/exhibit3/background1.png") no-repeat;
+    background: url("../media/exhibit2/background1.png") no-repeat;
 }
 #container2{
-    background: url("../media/exhibit3/background2.png") no-repeat;
+    background: url("../media/exhibit2/background2.png") no-repeat;
 }
 #container3{
-    background: url("../media/exhibit3/background3.png") no-repeat;
+    background: url("../media/exhibit2/background3.png") no-repeat;
 }
 #container4{
-    background: url("../media/exhibit3/background4.png") no-repeat;
-}
-#container4{
-    background: url("../media/exhibit3/background4.png") no-repeat;
-}
-#container5{
-    background: url("../media/exhibit1/background2.png") no-repeat;
+    background: url("../media/exhibit2/background4.png") no-repeat;
 }
 #main-header {
     font-size: 60px;
 }
 #secondary-header {
     font-size: 30px;
+    width: 95%;
 }
-#voyager-5200{
-    height: 280px;
-    margin-top: 145px;
-    left: 15px;
-    position: absolute;
-    z-index: 10;
-}
-#voyager-edge{
-    height: 390px;
+#calisto{
+    height: 345px;
     margin-top: 90px;
-    left: 10px;
-    position: absolute;
-    z-index: 10;
-}
-#voyager-focus{
-    height: 550px;
-    margin-top: 20px;
-    left: 85px;
-    position: absolute;
-    z-index: 10;
-}
-#voyager-8200{
-    height: 550px;
-    margin-top: 20px;
-    left: 30px;
     position: absolute;
     z-index: 10;
 }
 .prodImg{
-    height: 575px;
-    margin-top: 5px;
-    left: -60px;
+    height: 450px;
+    margin-top: 90px;
     position: absolute;
     z-index: 10;
 }
@@ -133,44 +105,44 @@ width: 83.33%;
     width: 100%;
 }
 #footer{
-    background-image: url("../media/woodgrain2.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    margin-top: 468px;
-    position: relative;
-}
-#footer2{
-    background-image: url("../media/tile.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    margin-top: 468px;
-    position: relative;
-}
-#footer3{
-    background-image: url("../media/woodgrain.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    margin-top: 468px;
-    position: relative;
-}
-#footer4{
-    background-image: url("../media/linoleum1.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    margin-top: 468px;
-    position: relative;
-}
-#footer5{
     background-image: url("../media/woodgrain3.jpg");
     height: 240px;
     background-repeat: no-repeat;
     margin-top: 468px;
     position: relative;
 }
+#footer2{
+    background-image: url("../media/linoleum4.jpg");
+    height: 240px;
+    background-repeat: no-repeat;
+    margin-top: 468px;
+    position: relative;
+}
+#footer3{
+    background-image: url("../media/tile.jpg");
+    height: 240px;
+    background-repeat: no-repeat;
+    margin-top: 468px;
+    position: relative;
+}
+#footer4{
+    background-image: url("../media/woodgrain2.jpg");
+    height: 240px;
+    background-repeat: no-repeat;
+    margin-top: 468px;
+    position: relative;
+}
+#features-3{
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    margin-top: 165px;
+    max-width: 450px;
+    z-index: 7;
+}
 .features{
     font-family: 'Roboto', sans-serif;
     position: absolute;
-    margin-top: 115px;
+    margin-top: 150px;
     max-width: 450px;
     z-index: 7;
 }
@@ -268,210 +240,168 @@ h3{
 }
 #spot1 {
     position: absolute;
-    margin-top: 50%;
-    left: 18%;
+    margin-top: 40%;
+    left: 19%;
     z-index:10;
 }
 #spot1-off {
     position: absolute;
-    margin-top: 58%;
-    left: 26%;
+    margin-top: 48%;
+    left: 27%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot2 {
     position: absolute;
-    margin-top: 58%;
-    left: 41%;
+    margin-top: 25%;
+    left: 32%;
     z-index:10;
 }
 #spot2-off {
     position: absolute;
-    margin-top: 66%;
-    left: 49%;
+    margin-top: 33%;
+    left: 40%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot3 {
     position: absolute;
-    margin-top: 12%;
-    right: 33%;
+    margin-top: 87%;
+    right: 66%;
     z-index:10;
 }
 #spot3-off {
     position: absolute;
-    margin-top: 20%;
-    right: 41%;
+    margin-top: 95%;
+    right: 74%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot4 {
     position: absolute;
-    margin-top: 67%;
-    left: 64%;
+    margin-top: 55%;
+    left: 45%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    margin-top: 75%;
-    left: 72%;
+    margin-top: 63%;
+    left: 53%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    margin-top: 23%;
-    left: 3%;
+    margin-top: 88%;
+    left: 67%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    margin-top: 30.5%;
-    left: 10.5%;
+    margin-top: 96%;
+    left: 75%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot6 {
     position: absolute;
-    margin-top: 51%;
-    right: 55%;
+    margin-top: 8%;
+    right: 54%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    margin-top: 59%;
-    right: 63%;
+    margin-top: 16%;
+    right: 62%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot7 {
     position: absolute;
-    margin-top: 72%;
-    left: 49%;
+    margin-top: 44%;
+    left: 13%;
     z-index:10;
 }
 #spot7-off {
     position: absolute;
-    margin-top: 80%;
-    left: 57%;
+    margin-top: 52%;
+    left: 21%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot8 {
     position: absolute;
-    margin-top: 0%;
-    right: 56%;
+    margin-top: 33%;
+    right: 51%;
     z-index:10;
 }
 #spot8-off {
     position: absolute;
-    margin-top: 8%;
-    right: 64%;
+    margin-top: 41%;
+    right: 59%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot9 {
     position: absolute;
-    margin-top: 39%;
-    left: 20%;
+    margin-top: 19%;
+    left: 46%;
     z-index:10;
 }
 #spot9-off {
     position: absolute;
-    margin-top: 47%;
-    left: 28%;
+    margin-top: 27%;
+    left: 54%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot10 {
     position: absolute;
-    margin-top: 23%;
-    left: 25%;
+    margin-top: 9%;
+    left: 50%;
     z-index:10;
 }
 #spot10-off {
     position: absolute;
-    margin-top: 31%;
-    left: 33%;
+    margin-top: 16%;
+    left: 58%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot11 {
     position: absolute;
-    margin-top: 72%;
-    left: 73%;
+    margin-top: 37%;
+    left: 19%;
     z-index:10;
 }
 #spot11-off {
     position: absolute;
-    margin-top: 80%;
-    left: 82%;
+    margin-top: 45%;
+    left: 27%;
     z-index:10;
     height: 10px;
     width: 10px
 }
 #spot12 {
     position: absolute;
-    margin-top: 14%;
-    right: 68%;
+    margin-top: 55%;
+    right: 21%;
     z-index:10;
 }
 #spot12-off {
     position: absolute;
-    margin-top: 22%;
-    right: 75%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot13 {
-    position: absolute;
-    margin-top: 74%;
-    left: 27%;
-    z-index:10;
-}
-#spot13-off {
-    position: absolute;
-    margin-top: 82%;
-    left: 35%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot14 {
-    position: absolute;
-    margin-top: 69%;
-    left: 64%;
-    z-index:10;
-}
-#spot14-off {
-    position: absolute;
-    margin-top: 77%;
-    left: 72%;
-    z-index:10;
-    height: 10px;
-    width: 10px
-}
-#spot15 {
-    position: absolute;
-    margin-top: 57%;
-    right: 31%;
-    z-index:10;
-}
-#spot15-off {
-    position: absolute;
-    margin-top: 65%;
-    right: 38%;
+    margin-top: 63%;
+    right: 29%;
     z-index:10;
     height: 10px;
     width: 10px
@@ -599,6 +529,7 @@ h3{
   margin-right: -50%;
   transform: translate(-50%, -50%);
 }
+
 .header-text{
     position: absolute;
 }
