adding exhibit 5 to plamex

--- a/EBC_App/www/css/style_exhibit5.css
+++ b/EBC_App/www/css/style_exhibit5.css
@@ -13,41 +13,25 @@
     margin-top: 10px;
 }
 #container{
-    background: url("../media/exhibit1/background2.png") no-repeat;
+    background: url("../media/exhibit5/background1.png") no-repeat;
 }
 #container2{
-    background: url("../media/exhibit1/background3.png") no-repeat;
-}
-#container3{
-    background: url("../media/exhibit1/background4.png") no-repeat;
-}
-#container4{
-    background: url("../media/exhibit1/background1.png") no-repeat;  
-}
+    background: url("../media/exhibit5/background2.png") no-repeat;
+} 
 #main-header {
     font-size: 60px;
 }
 #secondary-header {
     font-size: 30px;
 }
-#bbfit{
-    height: 400px;
-    width: 450px;
-    position: relative;
-    z-index: 2;
-    margin-top: 160px;
-}
-#bb500{
-    height: 560px;
-    width: 465px;
-    position: relative;
-    z-index: 10;
+#rig800{
+    height: 465px;
 }
 .prodImg{
-    height: 560px;
-    width: 400px;
+    height: 580px;
     position: relative;
     z-index: 10;
+    margin-left: 20px;
 }
 .padded{
     padding: 40px 20px 20px 20px;
@@ -118,24 +102,10 @@ width: 83.33%;
     position: relative;
 }
 #footer2{
-    background-image: url("../media/linoleum1.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    bottom: 95px;
-    position: relative;
-}
-#footer3{
     background-image: url("../media/woodgrain2.jpg");
     height: 240px;
     background-repeat: no-repeat;
-    bottom: 95px;
-    position: relative;
-}
-#footer4{
-    background-image: url("../media/linoleum2.jpg");
-    height: 240px;
-    background-repeat: no-repeat;
-    bottom: 95px;
+    bottom: -20px;
     position: relative;
 }
 .features{
@@ -239,168 +209,84 @@ h3{
 }
 #spot1 {
     position: absolute;
-    bottom: 31%;
-    left: 5%;
+    bottom: 35%;
+    left: 19%;
     z-index:10;
 }
 #spot1-off {
     position: absolute;
-    bottom: 38%;
-    left: 13%;
+    bottom: 42%;
+    left: 27%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot2 {
     position: absolute;
-    bottom: 39%;
-    left: 47%;
+    bottom: 74%;
+    left: 26%;
     z-index:10;
 }
 #spot2-off {
     position: absolute;
-    bottom: 46%;
-    left: 55%;
+    bottom: 81%;
+    left: 35%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot3 {
     position: absolute;
-    top: 64%;
-    right: 64%;
+    top: 76%;
+    right: 52%;
     z-index:10;
 }
 #spot3-off {
     position: absolute;
-    top: 71%;
-    right: 72%;
+    top: 83%;
+    right: 59%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot4 {
     position: absolute;
-    bottom: 17%;
-    left: 1%;
+    bottom: 74%;
+    left: 22%;
     z-index:10;
 }
 #spot4-off {
     position: absolute;
-    bottom: 25%;
-    left: 8%;
+    bottom: 82%;
+    left: 30%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot5 {
     position: absolute;
-    bottom: 82%;
-    left: 50%;
+    bottom: 21%;
+    left: 13%;
     z-index:10;
 }
 #spot5-off {
     position: absolute;
-    bottom: 89%;
-    left: 59%;
+    bottom: 30%;
+    left: 21%;
     z-index:10;
     height: 10px;
     width: 10px;
 }
 #spot6 {
     position: absolute;
-    top: -4%;
-    right: 65%;
+    top: 87%;
+    right: 47%;
     z-index:10;
 }
 #spot6-off {
     position: absolute;
-    top: 3%;
-    right: 73%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot7 {
-    position: absolute;
-    bottom: 16%;
-    left: 63%;
-    z-index:10;
-}
-#spot7-off {
-    position: absolute;
-    bottom: 24%;
-    left: 71%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot8 {
-    position: absolute;
-    top: 54%;
-    right: 27%;
-    z-index:10;
-}
-#spot8-off {
-    position: absolute;
-    top: 61%;
-    right: 35%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot9 {
-    position: absolute;
-    bottom: 11%;
-    left: 7%;
-    z-index:10;
-}
-#spot9-off {
-    position: absolute;
-    bottom: 18%;
-    left: 15%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot10 {
-    position: absolute;
-    bottom: 58%;
-    left: -2%;
-    z-index:10;
-}
-#spot10-off {
-    position: absolute;
-    bottom: 66%;
-    left: 6%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot11 {
-    position: absolute;
-    bottom: 19%;
-    left: 63%;
-    z-index:10;
-}
-#spot11-off {
-    position: absolute;
-    bottom: 26%;
-    left: 71%;
-    z-index:10;
-    height: 10px;
-    width: 10px;
-}
-#spot12 {
-    position: absolute;
-    top: 62%;
-    right: 48%;
-    z-index:10;
-}
-#spot12-off {
-    position: absolute;
-    top: 69%;
-    right: 56%;
+    top: 96%;
+    right: 55%;
     z-index:10;
     height: 10px;
     width: 10px;
